# hs-paths2bins

./: CHANGELOG.md  Dockerfile  README.md  build-img.sh  doc-web.sh  example.sh  hs-paths2bins  hs-paths2bins.cabal  unit_test.sh
app/: Main.hs
src/: BinFinder.hs
test/: Spec.hs
