cabal-version:      3.14
name:               hs-paths2bins
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             yanagitani
maintainer:         takanori.yanagitani@gmail.com
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Werror

executable hs-paths2bins
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >= 4.14 && < 5,
        hs-paths2bins,
        unix
    hs-source-dirs:   app
    default-language: GHC2021

library
    import:           warnings
    exposed-modules: BinFinder
    build-depends:
        base >= 4.14 && < 5,
        unix
    hs-source-dirs:   src
    default-language: GHC2021

test-suite unit-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    build-depends:
        base >= 4.14 && < 5,
        HUnit,
        hs-paths2bins
    default-language: GHC2021
